# romea-ros2-path

./: .gitlab-ci.yml  romea_path.repos  romea_path_public.repos
romea_path/: CMakeLists.txt  package.xml
romea_path_msgs/: CMakeLists.txt  package.xml
romea_path_msgs/msg/: PathAnnotation.msg  PathAnnotations.msg  PathFrenetPose2D.msg  PathMatchedPoint2D.msg  PathMatchingInfo2D.msg  PathPosture2D.msg
romea_path_utils/: CMakeLists.txt  package.xml
romea_path_utils/include/romea_path_utils/: path_frenet_pose2d_conversions.hpp  path_matching_info_conversions.hpp  path_matching_point2d_conversions.hpp  path_posture2d_conversions.hpp
romea_path_utils/src/: path_frenet_pose2d_conversions.cpp  path_matching_info_conversions.cpp  path_matching_point2d_conversions.cpp  path_posture2d_conversions.cpp
romea_path_utils/test/: CMakeLists.txt  test_path_frenet_pose2d_conversions.cpp  test_path_matching_info_conversions.cpp  test_path_matching_point2d_conversions.cpp  test_path_posture2d_conversions.cpp
